--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,22 @@
   text-align: center;
   width: auto;
   height: 360px;
-  margin-bottom: 0;
+ margin-bottom: 0;
 }
 
 .img-responsive {
   width: 1000px;
   height: 360px;
   max-height: 360px;
+}
+
+#right {
+
+}
+
+#left {
+  float: right;
+
+
+
 }
